# Computer-Graphics

Objetos/: logo.blend
Trabalho 1/trab/: CMakeLists.txt  main.cpp
Trabalho 1/trab/common/: controls.cpp
Trabalho 2/trab/: CMakeLists.txt  main.cpp
Trabalho 3/trab/: CMakeLists.txt  main.cpp
Trabalho Final/trab/: CMakeLists.txt  StandardShading.fragmentshader  main.cpp
Trabalho Final/trab/common/: controls.hpp  reflection.cpp  reflection.h
